# The-Kings-Forge-Full

./: AGENTS.md  Cargo.toml  Create-NewRepoForExes.ps1  Deploy-BuildToRepo.ps1  SYSTEM_MEMORY.md  build_err.txt  build_final_err.txt  build_gnu_output.txt  build_lld_out.txt  build_output.txt  build_output_utf8.txt  publish_exe.ps1  schedule.ps1
.github/workflows/: build.yml  create-repo-automation.yml
directives/: DIRECTIVES_0.0.2.md  DIRECTIVES_0.0.3.md  DIRECTIVES_0.0.4.md  DIRECTIVES_0.0.5.md
execution/: Cargo.toml  nt-proc-lens.msi  nt-proc-lens.wixobj  nt-proc-lens.wixpdb  nt-proc-lens.wxs
execution/src/: main.rs
planning/: BUILD_SPEC_v0.0.2.md  BUILD_SPEC_v0.0.3.md  BUILD_SPEC_v0.0.4.md  BUILD_SPEC_v0.0.5.md
src/: main.rs
